tests/invalid/Void_Invalid_1.whiley
import * from whiley.lang.*

function f(void z) -> void:
